--- a/band/template/bio.html
+++ b/band/template/bio.html
@@ -1,5 +1,183 @@
 <html>
 <body>
-this is bio
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+    <head>
+        <meta charset="utf-8">
+            <title>Members</title>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <meta name="description" content="">
+                    <meta name="author" content="">
+                        
+                        <!-- Le styles -->
+                        <link href="../static/style.css" rel="stylesheet">
+                            <style type="text/css">
+                                body {
+                                    padding-top: 20px;
+                                    padding-bottom: 60px;
+                                }
+                            
+                            /* Custom container */
+                            .container {
+                                margin: 0 auto;
+                                max-width: 1000px;
+                            }
+                            .container > hr {
+                                margin: 60px 0;
+                            }
+                            
+                            /* Main marketing message and sign up button */
+                            .jumbotron {
+                                margin: 80px 0;
+                                text-align: center;
+                            }
+                            .jumbotron h1 {
+                                font-size: 100px;
+                                line-height: 1;
+                            }
+                            .jumbotron .lead {
+                                font-size: 24px;
+                                line-height: 1.25;
+                            }
+                            .jumbotron .btn {
+                                font-size: 21px;
+                                padding: 14px 24px;
+                            }
+                            
+                            /* Supporting marketing content */
+                            .marketing {
+                                margin: 60px 0;
+                            }
+                            .marketing p + h4 {
+                                margin-top: 28px;
+                            }
+                            
+                            
+                            /* Customize the navbar links to be fill the entire space of the .navbar */
+                            .navbar .navbar-inner {
+                                padding: 0;
+                            }
+                            .navbar .nav {
+                                margin: 0;
+                                display: table;
+                                width: 100%;
+                            }
+                            .navbar .nav li {
+                                display: table-cell;
+                                width: 1%;
+                                float: none;
+                            }
+                            .navbar .nav li a {
+                                font-weight: bold;
+                                text-align: center;
+                                border-left: 1px solid rgba(255,255,255,.75);
+                                border-right: 1px solid rgba(0,0,0,.1);
+                            }
+                            .navbar .nav li:first-child a {
+                                border-left: 0;
+                                border-radius: 3px 0 0 3px;
+                            }
+                            .navbar .nav li:last-child a {
+                                border-right: 0;
+                                border-radius: 0 3px 3px 0;
+                            }
+                            </style>
+                            <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
+                                
+                                <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+                                <!--[if lt IE 9]>
+                                 <script src="../assets/js/html5shiv.js"></script>
+                                 <![endif]-->
+                                
+                                <!-- Fav and touch icons -->
+                                <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
+                                    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
+                                        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
+                                            <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
+                                                <link rel="shortcut icon" href="../assets/ico/favicon.png">
+                                                    </head>
+
+
+
+<div class="container">
+            
+            <div class="masthead">
+	    <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+              
+                <div class="navbar">
+                    <div class="navbar-inner">
+                        <div class="container">
+                            <ul class="nav">
+                                <li><a href="home.html">Home</a></li>
+                                <li><a href="tourdates.html">Tour</a></li>
+                                <li class="active"><a href="#">Members</a></li>
+                                <li><a href="contacts.html">Contact Us</a></li>
+                                
+                                
+                            </ul>
+                        </div>
+                    </div>
+                </div><!-- /.navbar -->
+            </div>
+
+
+<!-- Example row of columns -->
+            <div class="row-fluid">
+                <div class="span4">
+                    <h2>Alexander Sears</h2>
+		    <center><img src ="http://i.imgur.com/mXKC3cm.png alt="Alex" style ="width:200px;height:233px"></center>
+		    <hr>
+                    <p>Grammy and Golden Globe nominated songwriter and producer, Alex began his guitar career in his early teens. After starting a number of Rock bands, it wasn't until he joined the Salty Turtles in 2004 that he had his first big break.<hr>  <i> In his own words:</i> 
+		       "I never knew what the Salty Turtles had in store for me and my career, but I had a good feeling. I'm grateful to be surrounded by the amazing musicians that make up the Salty Turtles today." </p>
+                    
+                </div>
+                <div class="span4">
+                    <h2>Heading</h2>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                </div>
+                <div class="span4">
+                    <h2>Heading</h2>
+                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
+                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                </div>
+                <div class="span4">
+                    <h2>Heading</h2>
+                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
+                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                </div>
+                <div class="span4">
+                    <h2>Heading</h2>
+                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
+                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                </div>
+            </div>
+            
+            <hr>
+
+
+
+
+
+
+
+
+
+
+	
+
+
+
+
+
+
+
 </body>
 </html>
