--- a/band/template/bio.html
+++ b/band/template/bio.html
@@ -117,7 +117,7 @@
                             <ul class="nav">
                                 <li><a href="home.html">Home</a></li>
                                 <li><a href="tourdates.html">Tour</a></li>
-                                <li class="active"><a href="#">Members</a></li>
+                                <li class="active"><a href="#">Meet The Band</a></li>
                                 <li><a href="contacts.html">Contact Us</a></li>
                                 
                                 
@@ -126,7 +126,13 @@
                     </div>
                 </div><!-- /.navbar -->
             </div>
+<hr>
+<center><h2>The Salty Turtle Timeline:</h2></center>
 
+<iframe src='http://cdn.knightlab.com/libs/timeline/latest/embed/index.html?source=0AmWDAnNPpNVpdGxCcTJSZFBJbVV3ZW9VRDNyRVNvYkE&font=Bevan-PotanoSans&maptype=toner&lang=en&height=650' width='100%' height='650' frameborder='0'></iframe>
+<hr>
+
+<center><h2>The Members: </h2></center>
 
 <!-- Example row of columns -->
             <div class="row-fluid">
