--- a/band/template/bio.html
+++ b/band/template/bio.html
@@ -144,11 +144,13 @@
 		       "I never knew what the Salty Turtles had in store for me and my career, but I had a good feeling. I'm grateful to be surrounded by the amazing musicians that make up the Salty Turtles today." </p>
                     
                 </div>
-                <div class="span4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
-                </div>
+        <div class="span4">
+            <h2>Abdulaziz Alhawas</h2>
+            <center> <img src="../static/IMG_0136.JPG" alt="Abdul" style ="width:200px;height:233px"> </center>
+            <hr>
+            <p>Abdulaziz, professionally known by his stage name Abdul, is a singer, songwriter, record producer, voice actor, and choreographer.</p>
+
+        </div>
                 <div class="span4">
                     <h2>Heading</h2>
                     <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
