--- a/band/template/bio.html
+++ b/band/template/bio.html
@@ -152,9 +152,11 @@
 
         </div>
                 <div class="span4">
-                    <h2>Heading</h2>
-                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                    <h2>Lane Fujikado</h2>
+                    <center> <img src="../static/lane.jpg" alt="Lane" style ="width:200px;height:233px"> </center>
+                    <hr>
+                    <p>Lane began playing the bass guitar at the age of 6 months; most people considered him a baby prodigy. During his early teens he started his own band called the Salty Pugs. Unfortunately due to crack and sex addiction he fell into a downward spiral and was kicked out of the Salty Pugs. After a long road of recovery, Lane came clean of his addictions and contributed his musical talents to the Salty Turtles.</p>
+                    
                 </div>
                 <div class="span4">
                     <h2>Heading</h2>
