--- a/band/template/bio.html
+++ b/band/template/bio.html
@@ -159,9 +159,11 @@
                     
                 </div>
                 <div class="span4">
-                    <h2>Heading</h2>
-                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                    <h2>Erin Bailey</h2>
+                    <center> <img src="../static/erin.jpg" alt="Lane" style ="width:200px;height:233px"> </center>
+                    <hr>
+                    <p>Starting out as a struggling actress trying to make it in LA right after high school, Erin truly has the most inspirational story of all the Salty Turtles. She got her big break when she found the other band members arguing over an Olive Garden breadstick when she went out for lunch one day. The rest is history. From then on, she overcame her fear of strobe lights and has been performing all over the tri-state area ever since. </p>
+                    
                 </div>
                 <div class="span4">
                     <h2>Heading</h2>
