--- a/band/template/bio.html
+++ b/band/template/bio.html
@@ -174,6 +174,10 @@
             
             <hr>
 
+	    <div class="footer">
+                <p>&copy; Salty Turtles 2015</p>
+            </div>
+
 
 
 
