--- a/band/template/bio.html
+++ b/band/template/bio.html
@@ -134,49 +134,46 @@
 
 <center><h2>The Members: </h2></center>
 
-<!-- Example row of columns -->
-            <div class="row-fluid">
-                <div class="span4">
-                    <h2>Alexander Sears</h2>
-		    <center><img src ="../static/alex.png" alt="Alex" style ="width:200px;height:233px"></center>
-		    <hr>
-                    <p>Grammy and Golden Globe nominated songwriter and producer, Alex began his guitar career in his early teens. After starting a number of Rock bands, it wasn't until he joined the Salty Turtles in 2004 that he had his first big break.<hr>  <i> In his own words:</i> 
-		       "I never knew what the Salty Turtles had in store for me and my career, but I had a good feeling. I'm grateful to be surrounded by the amazing musicians that make up the Salty Turtles today." </p>
-                    
-                </div>
+
+    <div class="row-fluid">
         <div class="span4">
-            <h2>Abdulaziz Alhawas</h2>
-            <center> <img src="../static/IMG_0136.JPG" alt="Abdul" style ="width:200px;height:233px"> </center>
+            <center> <h2>Alexander Sears</h2>
+            <img src ="../static/alex.png" alt="Alex" style ="width:200px;height:233px"></center>
+		    <hr>
+            <p>Grammy and Golden Globe nominated songwriter and producer, Alex began his guitar career in his early teens. After starting a number of Rock bands, it wasn't until he joined the Salty Turtles in 2004 that he had his first big break.<hr>  <i> In his own words:</i>
+            "I never knew what the Salty Turtles had in store for me and my career, but I had a good feeling. I'm grateful to be surrounded by the amazing musicians that make up the Salty Turtles today." </p>
+        </div>
+
+        <div class="span4">
+            <center> <h2>Abdulaziz Alhawas</h2>
+            <img src="../static/IMG_0136.JPG" alt="Abdul" style ="width:200px;height:233px"> </center>
             <hr>
             <p>Abdulaziz, professionally known by his stage name Abdul, is a singer, songwriter, record producer, voice actor, and choreographer.</p>
-
         </div>
-                <div class="span4">
-                    <h2>Lane Fujikado</h2>
-                    <center> <img src="../static/lane.jpg" alt="Lane" style ="width:200px;height:233px"> </center>
-                    <hr>
-                    <p>Lane began playing the bass guitar at the age of 6 months; most people considered him a baby prodigy. During his early teens he started his own band called the Salty Pugs. Unfortunately due to crack and sex addiction he fell into a downward spiral and was kicked out of the Salty Pugs. After a long road of recovery, Lane came clean of his addictions and contributed his musical talents to the Salty Turtles.</p>
-                    
-                </div>
-                <div class="span4">
-                    <h2>Erin Bailey</h2>
-                    <center> <img src="../static/erin.jpg" alt="Lane" style ="width:200px;height:233px"> </center>
-                    <hr>
-                    <p>Starting out as a struggling actress trying to make it in LA right after high school, Erin truly has the most inspirational story of all the Salty Turtles. She got her big break when she found the other band members arguing over an Olive Garden breadstick when she went out for lunch one day. The rest is history. From then on, she overcame her fear of strobe lights and has been performing all over the tri-state area ever since. </p>
-                    
-                </div>
-                <div class="span4">
-                    <h2>Heading</h2>
-                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
-                </div>
-            </div>
-            
-            <hr>
 
-	    <div class="footer">
-                <p>&copy; Salty Turtles 2015</p>
-            </div>
+        <div class="span4">
+            <center> <h2>Lane Fujikado</h2>
+            <img src="../static/lane.jpg" alt="Lane" style ="width:200px;height:233px"> </center>
+            <hr>
+            <p>Lane began playing the bass guitar at the age of 6 months; most people considered him a baby prodigy. During his early teens he started his own band called the Salty Pugs. Unfortunately due to crack and sex addiction he fell into a downward spiral and was kicked out of the Salty Pugs. After a long road of recovery, Lane came clean of his addictions and contributed his musical talents to the Salty Turtles.</p>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="span4 offset2">
+            <center> <h2>Erin Bailey</h2>
+            <img src="../static/erin.jpg" alt="Lane" style ="width:200px;height:233px"> </center>
+            <hr>
+            <p>Starting out as a struggling actress trying to make it in LA right after high school, Erin truly has the most inspirational story of all the Salty Turtles. She got her big break when she found the other band members arguing over an Olive Garden breadstick when she went out for lunch one day. The rest is history. From then on, she overcame her fear of strobe lights and has been performing all over the tri-state area ever since. </p>
+        </div>
+        <div class="span4">
+            <center> <h2>Jarrin Oishi</h2>
+            <img src="../static/Jarrin.png" alt="Jarrin" style ="width:200px;height:233px"> </center>
+            <hr>
+            <p>I will write something here eventually, just getting this placeheld.</p>
+        </div>
+    </div>
+            
+    <hr>
 
 
 
