updating my bio

--- a/band/template/bio.html
+++ b/band/template/bio.html
@@ -148,7 +148,7 @@
             <center> <h2>Abdulaziz Alhawas</h2>
             <img src="../static/IMG_0136.JPG" alt="Abdul" style ="width:200px;height:233px"> </center>
             <hr>
-            <p>Abdulaziz, professionally known by his stage name Abdul, is a singer, songwriter, record producer, voice actor, and choreographer.</p>
+            <p>Abdulaziz, professionally known by his stage name Abdul, is a singer, songwriter, record producer, voice actor, and choreographer. Abdul started his career as a professional soccer player. He was at the same level with the likes of messi and ronaldo. unfortunately the Argentinian mafia arranged him to get an injury because he was stealing messi's spotlights. after retiring from soccer. Abdul found singing to be his new passion. He joined the Salty Turtles and the rest is to be remembered by history </p>
         </div>
 
         <div class="span4">
