--- a/band/template/bio.html
+++ b/band/template/bio.html
@@ -169,7 +169,10 @@
             <center> <h2>Jarrin Oishi</h2>
             <img src="../static/Jarrin.png" alt="Jarrin" style ="width:200px;height:233px"> </center>
             <hr>
-            <p>I will write something here eventually, just getting this placeheld.</p>
+            <p>Jarrin "Silky Smooth" Oishi attributes his musical success to his love of Guns n' Roses and Van Halen, a natural gift for hitting things, and his Majestic Locks of Mystical Origin™.
+                He is credited his bringing both the Taiko and Hangdrum into rock songs, where many said they didn't belong and is capable of playing a multitude of drums and still high five the
+                audience by using his Majestic Locks of Mystical Origin™ as extra appendages. He has never fought over a breadstick at Olive Garden because he knows that they are endless, just
+                like his hair and it's magical powers.</p>
         </div>
     </div>
             
