--- a/band/template/bio.html
+++ b/band/template/bio.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <body>
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -139,8 +139,8 @@
         <div class="span4">
             <center> <h2>Alexander Sears</h2>
             <img src ="../static/alex.png" alt="Alex" style ="width:200px;height:233px"></center>
-		    <hr>
-            <p>Grammy and Golden Globe nominated songwriter and producer, Alex began his guitar career in his early teens. After starting a number of Rock bands, it wasn't until he joined the Salty Turtles in 2004 that he had his first big break.<hr>  <i> In his own words:</i>
+	    <hr>	    
+            <p>Grammy and Golden Globe nominated songwriter and producer, Alex began his guitar career in his early teens. After starting a number of Rock bands, it wasn't until he joined the Salty Turtles in 2004 that he had his first big break. <i> In his own words:</i>
             "I never knew what the Salty Turtles had in store for me and my career, but I had a good feeling. I'm grateful to be surrounded by the amazing musicians that make up the Salty Turtles today." </p>
         </div>
 
